@@ -143,7 +143,7 @@ public class GameController extends Controller {
         } else {
             game.nextDay();
             game.getPlayer().next_day();
-            dayText.setText("Dzień: " + game.getInvestments().getFirst().getInvestment().getDay());
+            dayText.setText("Dzień: " + game.getInvestments().get(0).getInvestment().getDay());
 
             refreshList();
             refreshText();
@@ -306,7 +306,7 @@ public class GameController extends Controller {
             if (selected == null) {
                 return;
             }
-            if (selected.getInvestment().getValue() > game.getPlayer().getAvailableMoney()) { // value * kupowana ilość
+            if (selected.getInvestment().getValue() > game.getPlayer().getAvailableMoney()) {
                 infoDialog("Nie posiadasz wystarczająco gotówki");
                 return;
             }
